src/objects/LeanData__API_Metric__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__API_Type__c</fullName>
        <label>API Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Date__c</fullName>
        <formula>DATEVALUE(LeanData__Start_Time__c)</formula>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeanData__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Requester_Name__c</fullName>
        <label>Requester Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Requester_Type__c</fullName>
        <label>Requester Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Status_Code__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Version__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>API Metric</label>
    <nameField>
        <label>API Metric</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>